src/test/ui/generics/generic-arg-mismatch-recover.stderr
error[E0107]: this struct takes 1 lifetime argument but 2 lifetime arguments were supplied
  --> $DIR/generic-arg-mismatch-recover.rs:6:5
   |
LL |     Foo::<'static, 'static, ()>(&0);
   |     ^^^            --------- help: remove this lifetime argument
   |     |
   |     expected 1 lifetime argument
   |
note: struct defined here, with 1 lifetime parameter: `'a`
  --> $DIR/generic-arg-mismatch-recover.rs:1:8
   |
LL | struct Foo<'a, T: 'a>(&'a T);
   |        ^^^ --

error[E0107]: this struct takes 1 lifetime argument but 2 lifetime arguments were supplied
  --> $DIR/generic-arg-mismatch-recover.rs:9:5
   |
LL |     Bar::<'static, 'static, ()>(&());
   |     ^^^            --------- help: remove this lifetime argument
   |     |
   |     expected 1 lifetime argument
   |
note: struct defined here, with 1 lifetime parameter: `'a`
  --> $DIR/generic-arg-mismatch-recover.rs:3:8
   |
LL | struct Bar<'a>(&'a ());
   |        ^^^ --

error[E0107]: this struct takes 0 type arguments but 1 type argument was supplied
  --> $DIR/generic-arg-mismatch-recover.rs:9:5
   |
LL |     Bar::<'static, 'static, ()>(&());
   |     ^^^                   ---- help: remove this type argument
   |     |
   |     expected 0 type arguments
   |
note: struct defined here, with 0 type parameters
  --> $DIR/generic-arg-mismatch-recover.rs:3:8
   |
LL | struct Bar<'a>(&'a ());
   |        ^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0107`.
